force-app/main/default/objects/Program_Metrics__c/Program_Metrics__c.object-meta.xml
<CustomObject>
    <description>Time-based attributes specific to a program.</description>
    <label>Program Metrics</label>
    <nameField>
        <displayFormat>PM{00000000}</displayFormat>
        <label>Program Metric ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>