force-app/main/default/objects/Program_Metrics__c/fields/AARP_Event_Participation__c.field-meta.xml
<CustomField>
    <fullName>AARP_Event_Participation__c</fullName>
    <description>Did this chapter participate in an AARP activity or event this year?</description>
    <inlineHelpText>Did this chapter participate in an AARP activity or event this year?</inlineHelpText>
    <label>AARP Event Participation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>