force-app/main/default/objects/Program_Metrics__c/fields/Add_CTC__c.field-meta.xml
<CustomField>
    <fullName>Add_CTC__c</fullName>
    <description>Number of accepted returns claiming ACTC.</description>
    <inlineHelpText>Number of accepted returns claiming ACTC.</inlineHelpText>
    <label>Add CTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>