force-app/main/default/objects/Program_Metrics__c/fields/Administrative_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Expenses__c</fullName>
    <description>Administrative related expenses spent this reporting period.</description>
    <inlineHelpText>Enter administrative related expenses spent this reporting period.</inlineHelpText>
    <label>Administrative Expenses</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>