force-app/main/default/objects/Program_Metrics__c/fields/Advance_PTC_Payment_Count__c.field-meta.xml
<CustomField>
    <fullName>Advance_PTC_Payment_Count__c</fullName>
    <description>Count of Form 1040, Line 46 (Excess Advance Premium
Tax Credit Repayment) &gt; $0.</description>
    <inlineHelpText>Count of Form 1040, Line 46 (Excess Advance Premium
Tax Credit Repayment) &gt; $0.</inlineHelpText>
    <label>Advance PTC Payment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>