force-app/main/default/objects/Program_Metrics__c/fields/Advertising_Income__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Income__c</fullName>
    <description>Income amount earned from advertising this reporting period.</description>
    <inlineHelpText>Enter the income amount earned from advertising this reporting period.</inlineHelpText>
    <label>Advertising Income</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>