force-app/main/default/objects/Program_Metrics__c/fields/Answer_1__c.field-meta.xml
<CustomField>
    <fullName>Answer_1__c</fullName>
    <description>Corresponding answer to annual census question #1.</description>
    <inlineHelpText>Corresponding answer to annual census question #1.</inlineHelpText>
    <label>Answer #1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>