force-app/main/default/objects/Program_Metrics__c/fields/Answer_2__c.field-meta.xml
<CustomField>
    <fullName>Answer_2__c</fullName>
    <description>Corresponding answer to annual census question #2.</description>
    <inlineHelpText>Corresponding answer to annual census question #2.</inlineHelpText>
    <label>Answer #2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>