force-app/main/default/objects/Program_Metrics__c/fields/Apr__c.field-meta.xml
<CustomField>
    <fullName>Apr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apr</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Metrics (Apr)</relationshipLabel>
    <relationshipName>Program_Metrics3</relationshipName>
    <type>Lookup</type>
</CustomField>