force-app/main/default/objects/Program_Metrics__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>SPEC Area as identified in STARS site table.</description>
    <inlineHelpText>SPEC Area as identified in STARS site table.</inlineHelpText>
    <label>Area</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>