force-app/main/default/objects/Program_Metrics__c/fields/Associated_Grant__c.field-meta.xml
<CustomField>
    <fullName>Associated_Grant__c</fullName>
    <description>Captures any IRS grants associated with this program for this reporting year.</description>
    <inlineHelpText>Select the grant associated with this program for this reporting year.  If there is no grant associated with this location, leave this field blank.</inlineHelpText>
    <label>Associated Grant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TCE</fullName>
            </value>
            <value>
                <fullName>VITA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>