force-app/main/default/objects/Program_Metrics__c/fields/Aug__c.field-meta.xml
<CustomField>
    <fullName>Aug__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aug</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Metrics (Aug)</relationshipLabel>
    <relationshipName>Program_Metrics7</relationshipName>
    <type>Lookup</type>
</CustomField>