force-app/main/default/objects/Program_Metrics__c/fields/Average_Advance_PTC_Payment__c.field-meta.xml
<CustomField>
    <fullName>Average_Advance_PTC_Payment__c</fullName>
    <description>Total ADV PTC Repayment divided by ADV PTC Pmt Count.</description>
    <inlineHelpText>Total ADV PTC Repayment divided by ADV PTC Pmt Count.</inlineHelpText>
    <label>Average Advance PTC Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>