force-app/main/default/objects/Program_Metrics__c/fields/Average_AGI__c.field-meta.xml
<CustomField>
    <fullName>Average_AGI__c</fullName>
    <description>Average AGI (adjustable gross income) of accepted returns filed.</description>
    <inlineHelpText>Average AGI (adjustable gross income) of accepted returns filed.</inlineHelpText>
    <label>Average AGI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>