force-app/main/default/objects/Program_Metrics__c/fields/Average_EIC__c.field-meta.xml
<CustomField>
    <fullName>Average_EIC__c</fullName>
    <description>Average EIC of accepted returns.</description>
    <inlineHelpText>Average EIC of accepted returns.</inlineHelpText>
    <label>Average EIC</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>