force-app/main/default/objects/Program_Metrics__c/fields/Average_Meeting_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Average_Meeting_Attendance__c</fullName>
    <description>The average number of members attending this Chapter&#39;s monthly meetings.</description>
    <inlineHelpText>Enter the average number of members attending this Chapter&#39;s monthly meetings.</inlineHelpText>
    <label>Average Meeting Attendance</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>