force-app/main/default/objects/Program_Metrics__c/fields/Average_Member_Age__c.field-meta.xml
<CustomField>
    <fullName>Average_Member_Age__c</fullName>
    <description>Enter Average age range of Chapter Members.</description>
    <inlineHelpText>Enter Average age range of Chapter Members.</inlineHelpText>
    <label>Average Member Age</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>55-65</fullName>
            </value>
            <value>
                <fullName>66-75</fullName>
            </value>
            <value>
                <fullName>76+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>