force-app/main/default/objects/Program_Metrics__c/fields/Average_Payment__c.field-meta.xml
<CustomField>
    <fullName>Average_Payment__c</fullName>
    <description>Total responsibility payment divided by responsibility payment count (Form 1040, line 61).</description>
    <inlineHelpText>Total responsibility payment divided by responsibility payment count (Form 1040, line 61).</inlineHelpText>
    <label>Average Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>