force-app/main/default/objects/Program_Metrics__c/fields/Average_PTC__c.field-meta.xml
<CustomField>
    <fullName>Average_PTC__c</fullName>
    <description>Total PTC divided by PTC Count.</description>
    <inlineHelpText>Total PTC divided by PTC Count.</inlineHelpText>
    <label>Average PTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>