force-app/main/default/objects/Program_Metrics__c/fields/Average_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_Refund_Amount__c</fullName>
    <description>Average refund amount of accepted returns.</description>
    <inlineHelpText>Average refund amount of accepted returns.</inlineHelpText>
    <label>Average Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>