force-app/main/default/objects/Program_Metrics__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>SPEC Branch as identified in STARS site table.</description>
    <inlineHelpText>SPEC Branch as identified in STARS site table.</inlineHelpText>
    <label>Branch</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>