force-app/main/default/objects/Program_Metrics__c/fields/Cash_Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Cash_Ending_Balance__c</fullName>
    <description>Chapter&#39;s ending cash balance for this report period.</description>
    <inlineHelpText>Enter this chapter&#39;s ending cash balance for this report period.</inlineHelpText>
    <label>Cash Ending Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>