force-app/main/default/objects/Program_Metrics__c/fields/Cash_Starting_Balance__c.field-meta.xml
<CustomField>
    <fullName>Cash_Starting_Balance__c</fullName>
    <description>Chapter&#39;s starting cash balance for this report period.  Cash on hand includes money that had not been deposited in any of the chapter’s accounts as of January 1 of this reporting year.</description>
    <inlineHelpText>Enter chapter&#39;s starting cash balance; money that has not been deposited in any of the chapter’s accounts as of January 1 of this reporting year.</inlineHelpText>
    <label>Cash Starting Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>