force-app/main/default/objects/Program_Metrics__c/fields/Census_Question_2__c.field-meta.xml
<CustomField>
    <fullName>Census_Question_2__c</fullName>
    <description>Annual census question that is entered each year.  Corresponding answer is provided in field, Answer #2.</description>
    <inlineHelpText>Annual census question that is entered each year.  Corresponding answer is provided in field, Answer #2.</inlineHelpText>
    <label>Census Question #2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>