force-app/main/default/objects/Program_Metrics__c/fields/Census_Report__c.field-meta.xml
<CustomField>
    <fullName>Census_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Census Report</label>
    <type>Checkbox</type>
</CustomField>