force-app/main/default/objects/Program_Metrics__c/fields/Census_Report_Received__c.field-meta.xml
<CustomField>
    <fullName>Census_Report_Received__c</fullName>
    <label>Census Report Received</label>
    <type>Date</type>
</CustomField>