force-app/main/default/objects/Program_Metrics__c/fields/Chapter_Member_Fee__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Member_Fee__c</fullName>
    <description>Enter the Chapter monthly member fee.</description>
    <inlineHelpText>Enter the Chapter monthly member fee.</inlineHelpText>
    <label>Chapter Member Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>