force-app/main/default/objects/Program_Metrics__c/fields/Chapter_Service_Award_Nomination__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Service_Award_Nomination__c</fullName>
    <description>Was this chapter nominated for a Chapter Service Award (CSA) this year?</description>
    <inlineHelpText>Was this chapter nominated for a Chapter Service Award (CSA) this year?</inlineHelpText>
    <label>Chapter Service Award Nomination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>