force-app/main/default/objects/Program_Metrics__c/fields/Chapters_Location_Verification__c.field-meta.xml
<CustomField>
    <fullName>Chapters_Location_Verification__c</fullName>
    <formula>IF(Program__r.Branding_Descriptor__c = &#39;Chapters&#39;, &quot;ALERT! Please ensure you have selected the correct chapter name and number before beginning data entry.&quot;, &quot;No Volunteer Alert&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chapters Location Verification</label>
    <type>Text</type>
</CustomField>