force-app/main/default/objects/Program_Metrics__c/fields/Checking_Starting_Balance__c.field-meta.xml
<CustomField>
    <fullName>Checking_Starting_Balance__c</fullName>
    <description>Enter Chapter’s checking starting balance as of January 1.</description>
    <inlineHelpText>Enter Chapter’s checking starting balance as of January 1.</inlineHelpText>
    <label>Checking Starting Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>