force-app/main/default/objects/Program_Metrics__c/fields/Child_Tax_Credit__c.field-meta.xml
<CustomField>
    <fullName>Child_Tax_Credit__c</fullName>
    <description>Number of accepted returns claiming the child tax credit.</description>
    <inlineHelpText>Number of accepted returns claiming the child tax credit.</inlineHelpText>
    <label>Child Tax Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>