force-app/main/default/objects/Program_Metrics__c/fields/CSA__c.field-meta.xml
<CustomField>
    <fullName>CSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSA</label>
    <type>Checkbox</type>
</CustomField>