force-app/main/default/objects/Program_Metrics__c/fields/CSA_Year_Received__c.field-meta.xml
<CustomField>
    <fullName>CSA_Year_Received__c</fullName>
    <label>CSA Year Received</label>
    <type>Date</type>
</CustomField>