force-app/main/default/objects/Program_Metrics__c/fields/Current_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Member_Count__c</fullName>
    <description>Most current Chapter member count.</description>
    <inlineHelpText>Enter this Chapter&#39;s most current member number count.</inlineHelpText>
    <label>Current Member Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>