force-app/main/default/objects/Program_Metrics__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>SPEC program (VITA, TCE, AARP, etc) as shown in STARS site table.</description>
    <inlineHelpText>SPEC program (VITA, TCE, AARP, etc) as shown in STARS site table.</inlineHelpText>
    <label>Customer Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>