force-app/main/default/objects/Program_Metrics__c/fields/Dec__c.field-meta.xml
<CustomField>
    <fullName>Dec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dec</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Metrics (Dec)</relationshipLabel>
    <relationshipName>Program_MetricsbcF3</relationshipName>
    <type>Lookup</type>
</CustomField>