force-app/main/default/objects/Program_Metrics__c/fields/Donations_Received__c.field-meta.xml
<CustomField>
    <fullName>Donations_Received__c</fullName>
    <description>Amount received from donations this reporting period.</description>
    <inlineHelpText>Enter the amount received from donations this reporting period.</inlineHelpText>
    <label>Donations Received</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>