force-app/main/default/objects/Program_Metrics__c/fields/Dues_Income__c.field-meta.xml
<CustomField>
    <fullName>Dues_Income__c</fullName>
    <description>Income from collected dues this reporting period.</description>
    <inlineHelpText>Enter the income amount from chapter dues collected this reporting period.</inlineHelpText>
    <label>Dues Income</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>