force-app/main/default/objects/Program_Metrics__c/fields/Earned_Income_Tax_Credit__c.field-meta.xml
<CustomField>
    <fullName>Earned_Income_Tax_Credit__c</fullName>
    <description>Number of accepted returns claiming the earned income tax credit.</description>
    <inlineHelpText>Number of accepted returns claiming the earned income tax credit.</inlineHelpText>
    <label>Earned Income Tax Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>