force-app/main/default/objects/Program_Metrics__c/fields/Education_Tax_Credit__c.field-meta.xml
<CustomField>
    <fullName>Education_Tax_Credit__c</fullName>
    <description>Number of accepted returns claiming the education tax credit.</description>
    <inlineHelpText>Number of accepted returns claiming the education tax credit.</inlineHelpText>
    <label>Education Tax Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>