force-app/main/default/objects/Program_Metrics__c/fields/Efile_Prior__c.field-meta.xml
<CustomField>
    <fullName>Efile_Prior__c</fullName>
    <description>Number of previous year e-file returns submitted. This is an optional field, and can be used to compare local statistics with IRS reported statistics.</description>
    <inlineHelpText>Number of previous year e-file returns submitted. This is an optional field, and can be used to compare local statistics with IRS reported statistics.</inlineHelpText>
    <label>Efile Prior</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>