force-app/main/default/objects/Program_Metrics__c/fields/EFIN__c.field-meta.xml
<CustomField>
    <fullName>EFIN__c</fullName>
    <description>IRS assigned number indicating that this site has completed the IRS e-file Application to become an Authorized IRS e-file Provider.</description>
    <inlineHelpText>IRS assigned number indicating that this site has completed the IRS e-file Application to become an Authorized IRS e-file Provider.</inlineHelpText>
    <label>EFIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>