force-app/main/default/objects/Program_Metrics__c/fields/Elderly_Credit__c.field-meta.xml
<CustomField>
    <fullName>Elderly_Credit__c</fullName>
    <description>Number of accepted returns claiming the elderly credit.</description>
    <inlineHelpText>Number of accepted returns claiming the elderly credit.</inlineHelpText>
    <label>Elderly Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>