force-app/main/default/objects/Program_Metrics__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <formula>EFIN__c &amp; &#39;-&#39; &amp; TEXT( YEAR(Report_Period_Start_Date__c)) &amp; TEXT(MONTH(Report_Period_Start_Date__c)) &amp; TEXT(DAY(Report_Period_Start_Date__c)) &amp; &#39;-&#39; &amp; TEXT(YEAR(Report_Period_End_Date__c)) &amp; TEXT(MONTH(Report_Period_End_Date__c)) &amp; TEXT(DAY(Report_Period_End_Date__c)) &amp;&#39;-&#39; &amp; Program__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExternalID</label>
    <type>Text</type>
</CustomField>