force-app/main/default/objects/Program_Metrics__c/fields/Feb__c.field-meta.xml
<CustomField>
    <fullName>Feb__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feb</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Metrics (Feb)</relationshipLabel>
    <relationshipName>Program_Metrics1</relationshipName>
    <type>Lookup</type>
</CustomField>