force-app/main/default/objects/Program_Metrics__c/fields/Federal_Transmitted__c.field-meta.xml
<CustomField>
    <fullName>Federal_Transmitted__c</fullName>
    <description>The unique number of e-files transmitted to UTS.  Data is from TaxWise.</description>
    <inlineHelpText>The unique number of e-files transmitted to UTS.  Data is from TaxWise.</inlineHelpText>
    <label>Federal Transmitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>