force-app/main/default/objects/Program_Metrics__c/fields/Financial_Verification__c.field-meta.xml
<CustomField>
    <fullName>Financial_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Per Chapter Compliance guidelines, a verification statement is included at the end of the financial section of the Program Metrics screen so that anyone doing data entry of financial information must verify that the data is accurate and can be filed by AARP in a group return.</description>
    <label>Financial Verification</label>
    <type>Checkbox</type>
</CustomField>