force-app/main/default/objects/Program_Metrics__c/fields/First_Transmission_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Transmission_Date__c</fullName>
    <description>First date the Site transmitted a return.</description>
    <inlineHelpText>First date the Site transmitted a return</inlineHelpText>
    <label>First Transmission Date</label>
    <type>Date</type>
</CustomField>