force-app/main/default/objects/Program_Metrics__c/fields/Form_8888__c.field-meta.xml
<CustomField>
    <fullName>Form_8888__c</fullName>
    <label>Form 8888</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>