force-app/main/default/objects/Program_Metrics__c/fields/Full_Year_Count__c.field-meta.xml
<CustomField>
    <fullName>Full_Year_Count__c</fullName>
    <description>Count of Form 1040, line 61 checkbox marked</description>
    <inlineHelpText>Count of Form 1040, line 61 checkbox marked</inlineHelpText>
    <label>Full Year Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>