force-app/main/default/objects/Program_Metrics__c/fields/Gifts_Donations_Paid__c.field-meta.xml
<CustomField>
    <fullName>Gifts_Donations_Paid__c</fullName>
    <description>Enter gift and donation expenses made during this reporting period.</description>
    <inlineHelpText>Enter gift and donation expenses made during this reporting period.</inlineHelpText>
    <label>Gifts/Donations Paid</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>