force-app/main/default/objects/Program_Metrics__c/fields/Head_of_Household__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Household__c</fullName>
    <description>Number of accepted returns claiming head of household filing status.</description>
    <inlineHelpText>Number of accepted returns claiming head of household filing status.</inlineHelpText>
    <label>Head of Household</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>