force-app/main/default/objects/Program_Metrics__c/fields/ID1040_Returns__c.field-meta.xml
<CustomField>
    <fullName>ID1040_Returns__c</fullName>
    <description>Number of 1040 Returns.</description>
    <inlineHelpText>Number of 1040 Returns.</inlineHelpText>
    <label>ID1040 Returns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>