force-app/main/default/objects/Program_Metrics__c/fields/ID1040A_Returns__c.field-meta.xml
<CustomField>
    <fullName>ID1040A_Returns__c</fullName>
    <description>Number of 1040A Returns.</description>
    <inlineHelpText>Number of 1040A Returns.</inlineHelpText>
    <label>ID1040A Returns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>