force-app/main/default/objects/Program_Metrics__c/fields/ID1040EZ_Returns__c.field-meta.xml
<CustomField>
    <fullName>ID1040EZ_Returns__c</fullName>
    <description>Number of 1040 EZ Returns.</description>
    <inlineHelpText>Number of 1040 EZ Returns.</inlineHelpText>
    <label>ID1040EZ Returns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>