force-app/main/default/objects/Program_Metrics__c/fields/Insurance_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Date_Received__c</fullName>
    <label>Insurance Policy Coverage</label>
    <type>Date</type>
</CustomField>