force-app/main/default/objects/Program_Metrics__c/fields/Interest_Dividend_Income__c.field-meta.xml
<CustomField>
    <fullName>Interest_Dividend_Income__c</fullName>
    <description>Income amount earned from interest/dividends this reporting period.</description>
    <inlineHelpText>Enter the income amount earned from interest/dividends this reporting period.</inlineHelpText>
    <label>Interest/Dividend Income</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>