force-app/main/default/objects/Program_Metrics__c/fields/IRS_Database_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>IRS_Database_Site_Name__c</fullName>
    <description>Site Name used to order TaxWise software. Data is taken from software orders or software swaps.</description>
    <inlineHelpText>Site Name used to order TaxWise software. Data is taken from software orders or software swaps.</inlineHelpText>
    <label>IRS Database Site Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>