force-app/main/default/objects/Program_Metrics__c/fields/ITIN_Count__c.field-meta.xml
<CustomField>
    <fullName>ITIN_Count__c</fullName>
    <description>The number of accepted returns where the primary taxpayer identification number was an ITIN (Individual Taxpayer Identification Number).</description>
    <inlineHelpText>The number of accepted returns where the primary taxpayer identification number was an ITIN (Individual Taxpayer Identification Number).</inlineHelpText>
    <label>ITIN Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>