force-app/main/default/objects/Program_Metrics__c/fields/Jan__c.field-meta.xml
<CustomField>
    <fullName>Jan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jan</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Metrics</relationshipLabel>
    <relationshipName>Program_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>