force-app/main/default/objects/Program_Metrics__c/fields/Jul__c.field-meta.xml
<CustomField>
    <fullName>Jul__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jul</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Metrics (Jul)</relationshipLabel>
    <relationshipName>Program_Metrics6</relationshipName>
    <type>Lookup</type>
</CustomField>