force-app/main/default/objects/Program_Metrics__c/fields/Jun__c.field-meta.xml
<CustomField>
    <fullName>Jun__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jun</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Metrics (Jun)</relationshipLabel>
    <relationshipName>Program_Metrics5</relationshipName>
    <type>Lookup</type>
</CustomField>