force-app/main/default/objects/Program_Metrics__c/fields/Last_Transmission_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Transmission_Date__c</fullName>
    <description>Last date the site transmitted a return.</description>
    <inlineHelpText>Last date the site transmitted a return.</inlineHelpText>
    <label>Last Transmission Date</label>
    <type>Date</type>
</CustomField>