force-app/main/default/objects/Program_Metrics__c/fields/Last_VoM_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_VoM_Update__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Last VoM Update</label>
    <type>DateTime</type>
</CustomField>