force-app/main/default/objects/Program_Metrics__c/fields/Liability_Insurance_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Liability_Insurance_End_Date__c</fullName>
    <description>Liability insurance end date.</description>
    <inlineHelpText>Enter the end date for this chapter&#39;s current liability insurance term.</inlineHelpText>
    <label>Liability Insurance End Date</label>
    <type>Date</type>
</CustomField>