force-app/main/default/objects/Program_Metrics__c/fields/Liability_Insurance_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Liability_Insurance_Start_Date__c</fullName>
    <description>Liability insurance start date.</description>
    <inlineHelpText>Enter the start date for this chapter&#39;s current liability insurance term.</inlineHelpText>
    <label>Liability Insurance Start Date</label>
    <type>Date</type>
</CustomField>