force-app/main/default/objects/Program_Metrics__c/fields/Lockout_Date__c.field-meta.xml
<CustomField>
    <fullName>Lockout_Date__c</fullName>
    <description>Date field used to lockout unauthorized users from editing program metrics record once this date has been reached.</description>
    <inlineHelpText>Only authorized users may edit the record once this date is reached.</inlineHelpText>
    <label>Lockout Date</label>
    <type>Date</type>
</CustomField>