force-app/main/default/objects/Program_Metrics__c/fields/Mar__c.field-meta.xml
<CustomField>
    <fullName>Mar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mar</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Metrics (Mar)</relationshipLabel>
    <relationshipName>Program_Metrics2</relationshipName>
    <type>Lookup</type>
</CustomField>