force-app/main/default/objects/Program_Metrics__c/fields/Married_Filing_Separate__c.field-meta.xml
<CustomField>
    <fullName>Married_Filing_Separate__c</fullName>
    <description>Number of accepted returns claiming married filing separate filing status.</description>
    <inlineHelpText>Number of accepted returns claiming married filing separate filing status.</inlineHelpText>
    <label>Married Filing Separate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>