force-app/main/default/objects/Program_Metrics__c/fields/May__c.field-meta.xml
<CustomField>
    <fullName>May__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>May</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Metrics (May)</relationshipLabel>
    <relationshipName>Program_Metrics4</relationshipName>
    <type>Lookup</type>
</CustomField>